--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Code Challenge 1</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <div class="wrapper">
-    <!-- HEADER -->
-    <!-- SUB HEAD -->
-
-    <div id="content">
-      <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-    </div>
+<div class="wrapper">
+  <h1>Welcome to Riyadh</h1>
+  
+  <h2>Where A Traditional Past Meets A Modern Future.</h2>
+  
+  <div id="content">
+    <img src="./images/transportation/transit.jpg" alt="Modern Transit">
+    <h3>Travel</h3>
+    <p>Once a mudbrick waystation</p>
+    <h3>History</h3>
+    <p>Riyadh</p>
+    <img src="./images/garden.jpg" alt="Riyadh Garden">
+    <p>The city is divided into 15 municipal districts</p>
+    <ol>
+      <li>Step 1: Do this.</li>
+      <li>Step 2: Do that.</li>
+      <li>Step 3: Do something else.</li>
+    </ol>
+    <img src="./images/transportation/camels-in-truck.jpg" alt="The roads of Riyadh">
+    <h3>Sources</h3>
+    <p>Lonely Planet <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh"></a>.</p>
+    <p> Wikipida<a href="http://en.wikipedia.org/wiki/Riyadh"></a></p>
   </div>
+</div>
 </body>
 </html>
